# monitor-opciones

./: .env.example  .gitignore  README.md  _cleanup.py  _debug_oi.py  _debug_oi2.py  _fix_app.py  _fix_header.py  _funcs_out.txt  _funcs_out2.txt  _git_push.ps1  _push.py  _push_fix.py  _push_reports.py  _test_oi.py  app_web.py  monitor_opciones.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: __init__.py  app_settings.py  constants.py  settings.py  watchlists.py
core/: __init__.py  anomaly_detector.py  auth.py  backtester.py  barchart_oi.py  cache.py  clusters.py  container.py  credit_spread_scanner.py  economic_calendar.py  entities.py  expected_move.py  flow_classifier.py  gamma_exposure.py  iv_rank.py  monte_carlo.py  news.py  oi_tracker.py  oka_sentiment_v2.py  option_greeks.py  optionkings_analytic.py  projections.py  protocols.py  range_calc.py  scanner.py  smart_money.py  watchlist_builder.py
core/repositories/: __init__.py
core/services/: __init__.py  credit_spread_service.py  (+2 more)
domain/: __init__.py  entities.py
infrastructure/: __init__.py  api_integrations.py
page_modules/: __init__.py  admin_users_page.py  credit_spread_page.py  data_analysis_page.py  favorites_page.py  live_scanning_page.py  login_page.py  mi_perfil_page.py  oka_sentiment_page.py  open_interest_page.py  optionkings_page.py  range_page.py  reports_page.py  watchlist_page.py
pages/: calendar_page.py  data_analysis_page.py  favorites_page.py  important_companies_page.py  live_scanning_page.py  news_page.py  open_interest_page.py  reports_page.py  watchlist_page.py
presentation/: __init__.py
reports/: __init__.py  generators.py
tests/: __init__.py  test_suite.py
ui/: __init__.py  calendar_styles.py  calendar_utils.py  charts.py  components.py  oka_components.py  optionkings_components.py  plotly_professional_theme.py  shared.py  styles.py
utils/: __init__.py  background_updater.py  favorites.py  formatters.py  helpers.py  retry_utils.py  state.py
(+20 files in other folders)
